--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>GIF Generator</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="https://use.fontawesome.com/c44dd7ef6c.js"></script>
+    <meta name="Description" content="An experimental web app that lets you take a selfie to find relevant reaction GIFs.">
   </head>
   <body>
     <div id="app"></div>
